feat: 상품 상세 정보 페이지에 옵션 추가 버튼 추가

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -27,6 +27,13 @@
             <td th:text="${product.getImageUrl()}"></td>
         </tr>
     </table>
+
+    <div class="mb-3">
+        <a th:href="@{'/admin/products/' + ${product.getId()} + '/options/create'}" class="btn btn-primary">
+            옵션 추가
+        </a>
+    </div>
+
     <a th:href="@{/admin/products}" class="btn btn-secondary">목록으로</a>
 </div>
 </body>
