전남대 BE 이재륜 3단계 - 상품 옵션 (#302)
* docs: 0단계 요구사항

* chore: 이전 코드 가져오기

* docs: 1단계 요구사항 작성

* chore: jpa 의존성 추가

* chore: jpa 설정 내에 jdbc의존성 포함되어 있으므로 기존 jdbc 의존성 제거

* refactor: Member 엔티티 & MemberRepository에 JPA 적용

* fix: Member 엔티티에 빠진 getId() 추가

* fix: Member클래스 생성자 변경에 따른 서비스로직 수정

* refactor: Item 엔티티를 JPA 기반 구조로 변경

* refactor: ItemRepository를 JPA기반 방식으로 변경

* refactor: JPA 방식 변경에 따른 ItemService로직 수정

* refactor: Wishlist 엔티티 JPA방식으로 변경

* refactor: WishRepository JPA 방식으로 변경

* refactor: WishlistService 오타 수정

* refactor: JPA 메서드 키워드 'existBy' → 'existsBy'로 수정

* fix: LoginMemberArgumentResolver에서 memberId 타입 캐스팅 오류 수정

* delete: ItemServiceTest 제거 (다시 만들 예정)

* test: WishlistRepository 사용자 정의 JPA 메서드 테스트코드 추가

* refactor: 불필요한 주석&공백 제거

* test: MemberRepository의 findByEmail메서드 테스트 코드 작성

* docs: 1단계 체크리스트 체크

* docs: 2단계 요구사항 작성

* feat: Item 도메인에 페이지네이션 적용

* feat: AdminController의 상품 전체 목록 조회 페이지에 페이지네이션 적용

* feat: list.html 페이지네이션 적용

* chore: 삭제 수정 시 필요한 설정 파일 추가

* docs: 상품 조회 페이지네이션 구현 완료 체크

* feat: 한 유저의 위시리스트를 조회하는 로직에 페이지네이션 적용

* test: 기존 위시리스트 조회 테스트에 페이지네이션을 적용하여 단일 페이지와 페이징 처리 두 가지 케이스로 분리

* docs: 위시리스트 조회 페이지네이션 구현 완료 체크

* docs: 테스트 코드 구현사항 문서 작성

* docs: 3단계 요구사항 정리

* feat: Option 엔티티 생성

* feat: 상품 엔티티에 옵션 리스트 연관관계 매핑 추가

* feat: Option 엔티티 테이블 이름명 명시

* feat: OptionRequestDto 생성

* refactor: 유효성 검사를 OptionRequestDto로 이동함에 따라 엔티티의 수량 유효성 검사 제거 (책임분리)

* feat: OptionResponseDto 생성

* feat: 상품 옵션 조회 api 구현

* feat: 동일한 상품 내의 중복된 옵션명 검사 메서드 추가

* feat: 상품 옵션의 수량을 지정된 숫자만큼 차감하는 기능 구현

* feat: 옵션 테이블에 item_id와 name 컬럼 조합에 대해 유니크 제약조건 추가 (동일 상품 내 옵션명 중복 방지 - 2중 안전 장치)

* docs: 3단계 필수 구현사항들 체크

* feat: AdminController에 옵션 추가하는 기능 구현

* feat: 옵션 추가하는 관리자 페이지 구현

* feat: 상품 상세 정보 페이지에 옵션 추가 버튼 추가

* feat: 상품 상세 정보 페이지에 옵션 목록이 보이도록 추가

* docs: 3단계 선택 요구사항 체크

* test: OptionRepositoryTest 작성

* test: OptionRepositoryDynamicTest 다이나믹 테스트 생성

* test: OptionRepositoryTest에 ParameterizedTest 적용

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -27,6 +27,33 @@
             <td th:text="${product.getImageUrl()}"></td>
         </tr>
     </table>
+
+    <div class="mt-5">
+        <h4>옵션 목록</h4>
+        <table class="table table-bordered w-50">
+            <thead>
+            <tr>
+                <th>옵션 ID</th>
+                <th>옵션명</th>
+                <th>옵션 개수</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="option : ${options}">
+                <td th:text="${option.id}"></td>
+                <td th:text="${option.name}"></td>
+                <td th:text="${option.quantity} + '개'"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="mb-3">
+        <a th:href="@{'/admin/products/' + ${product.getId()} + '/options/create'}" class="btn btn-primary">
+            옵션 추가
+        </a>
+    </div>
+
     <a th:href="@{/admin/products}" class="btn btn-secondary">목록으로</a>
 </div>
 </body>
